--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".RebonnteApplication"
         android:allowBackup="true"
@@ -13,19 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Rebonnte"
         tools:targetApi="31">
-        <receiver android:name=".MainActivity$MyBroadcastReceiver"
-            android:exported="@bool/receiver_exported">
-        </receiver>
-        <activity
-            android:name=".ui.medicine.MedicineDetailActivity"
-            android:theme="@style/Theme.Rebonnte.ActionBar"
-            android:parentActivityName=".MainActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.aisle.AisleDetailActivity"
-            android:parentActivityName=".MainActivity"
-            android:theme="@style/Theme.Rebonnte.ActionBar"
-            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
