--- a/.github/workflows/app_firebase_release.yml
+++ b/.github/workflows/app_firebase_release.yml
@@ -59,5 +59,5 @@ jobs:
           appId: ${{ secrets.FIREBASE_APP_ID }}
           serviceCredentialsFileContent: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_JSON }}
           groups: "testers"
-          file: app/build/outputs/apk/release/app-release.apk
+          file: app/release/app-release.apk
           releaseNotes: "Build triggered by tag ${{ github.ref_name }}"
